--- a/index.html
+++ b/index.html
@@ -9,16 +9,24 @@
 </head>
 
 <body>
-    <h1 class="heading">giang ơi</h1>
-    <p class="para">giang dep trai so 1 vn <br> qua tuyet voi</p>
+    <h1 class="heading">My Family</h1>
+
     <table border="5">
         <tr>
-            <td><img src="img/a.png" alt="" style="width: 300px;"></td>
-            <td><img src="img/b.png" alt="" style="width: 300px; "></td>
+            <td><img src="img/dad.jpg" alt="" style="width: 300px;"></td>
+            <td><img src="img/mom.jpg" alt="" style="width: 300px; "></td>
         </tr>
         <tr>
-            <td><img src="img/c.png" alt="" style="width: 300px;"></td>
-            <td><img src="img/d.png" alt="" style="width: 300px;"></td>
+            <td>My Dad</td>
+            <td>My Mom</td>
+        </tr>
+        <tr>
+            <td><img src="img/me.jpg" alt="" style="width: 300px;"></td>
+            <td><img src="img/sister.jpg" alt="" style="width: 300px;"></td>
+        </tr>
+        <tr>
+            <td>Me</td>
+            <td>My sister</td>
         </tr>
     </table>
 </body>
