--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 <body>
     <h1 class="heading">My Family</h1>
 
-    <table>
+    <table border="5">
         <tr>
-            <td><img src="img/dad.jpg" alt="Dad" style="width: 300px;"></td>
-            <td><img src="img/mom.jpg" alt="Mom" style="width: 300px;"></td>
-            <td><img src="img/me.jpg" alt="Me" style="width: 300px;"></td>
-            <td><img src="img/sister.jpg" alt="Sister" style="width: 300px;"></td>
+            <td><img src="img/dad.jpg" alt="" style="width: 300px;"></td>
+            <td><img src="img/mom.jpg" alt="" style="width: 300px; "></td>
+            <td><img src="img/me.jpg" alt="" style="width: 300px;"></td>
+            <td><img src="img/sister.jpg" alt="" style="width: 300px;"></td>
         </tr>
         <tr>
             <td>My Dad</td>
             <td>My Mom</td>
             <td>Me</td>
-            <td>My Sister</td>
+            <td>My sister</td>
         </tr>
     </table>
 </body>
