--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>MY FAMILY</title>
 </head>
 
-<body>
+<body style="background-image: url('img/29.jpg'); background-size: cover; background-position: center;">
     <h1 class="heading">My Family</h1>
 
     <table border="5">
