update content and CSS file

--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     <title>MY FAMILY</title>
 </head>
 
-<body style="background-image: url('img/29.jpg'); background-size: cover; background-position: center;">
-    <h1 class="heading">My Family</h1>
-
-    <table border="5">
+<body>
+    <h1 class="title">My Family</h1>
+    <p class="content">Dưới đây là những hình ảnh giới thiệu về gia đình của tôi.Gia đinh tôi gồm 4 người có ba tôi,mẹ
+        tôi chị gái tôi và tôi. <br>
+        Ba tôi là người rất kiên nhẫn và luôn dành thời gian dạy tôi những điều bổ ích trong cuộc sống. Mẹ tôi thì dịu
+        dàng và quan tâm đến từng bữa ăn của cả nhà, luôn nấu những món ăn ngon và giàu dinh dưỡng. Chị gái tôi thông
+        minh và chăm chỉ, luôn sẵn lòng giúp đỡ tôi trong việc học và chia sẻ những câu chuyện thú vị. Gia đình tôi tuy
+        không lớn nhưng luôn tràn ngập tiếng cười và tình yêu thương, là nơi tôi luôn cảm thấy an yên và hạnh phúc nhất.
+    </p>
+    <table>
         <tr>
             <td><img src="img/dad.jpg" alt="" style="width: 300px;"></td>
             <td><img src="img/mom.jpg" alt="" style="width: 300px; "></td>
@@ -25,6 +31,8 @@
             <td>My sister</td>
         </tr>
     </table>
+    <a class="link" href="https://sungjingiang.github.io">Liên kết Github</a>
+
 </body>
 
 </html>
