--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <td>My sister</td>
         </tr>
     </table>
-    <a class="link" href="https://sungjingiang.github.io">Liên kết Github</a>
+    <a class="link" href="https://sungjingiang.github.io/web1">Liên kết Github</a>
 
 </body>
 
